@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Wed Sep 27 01:22:48 CEST 2006
+// Thu Sep 28 17:54:19 CEST 2006
 //
 // (C) 2005 Jb Evain
 //
@@ -62,6 +62,7 @@ namespace Mono.Cecil {
 			List.Add (value);
 		}
 
+
 		public new void Clear ()
 		{
 			foreach (MethodDefinition item in this)
@@ -96,6 +97,7 @@ namespace Mono.Cecil {
 			List.Remove (value);
 		}
 
+
 		public new void RemoveAt (int index)
 		{
 			Detach (this [index]);
@@ -119,7 +121,7 @@ namespace Mono.Cecil {
 			return ret.ToArray (typeof (MethodDefinition)) as MethodDefinition [];
 		}
 
-		internal MethodDefinition GetMethod (string name, IList parameters)
+		internal MethodDefinition GetMethodInternal (string name, IList parameters)
 		{
 			foreach (MethodDefinition meth in this) {
 				if (meth.Name != name || meth.Parameters.Count != parameters.Count)
@@ -153,17 +155,17 @@ namespace Mono.Cecil {
 
 		public MethodDefinition GetMethod (string name, Type [] parameters)
 		{
-			return GetMethod (name, parameters);
+			return GetMethodInternal (name, parameters);
 		}
 
 		public MethodDefinition GetMethod (string name, TypeReference [] parameters)
 		{
-			return GetMethod (name, parameters);
+			return GetMethodInternal (name, parameters);
 		}
 
 		public MethodDefinition GetMethod (string name, ParameterDefinitionCollection parameters)
 		{
-			return GetMethod (name, parameters);
+			return GetMethodInternal (name, parameters);
 		}
 
 		void Attach (MemberReference member)
